add new website from server na

--- a/xem-phim-moi/doraemon-nobita-va-ban-giao-huong-dia-cau/index.html
+++ b/xem-phim-moi/doraemon-nobita-va-ban-giao-huong-dia-cau/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             14
+             15
             </dd>
             <br/>
            </dl>
@@ -1787,18 +1787,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/funny-face" title="Funny Face">
+          <a class="list-top-movie-link" href="/phim-moi/loi-thu-toi-cua-ke-sat-nhan" title="Lời thú tội của kẻ sát nhân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/funny-face-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-thu-toi-cua-ke-sat-nhan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Funny Face
+             Lời thú tội của kẻ sát nhân
             </span>
             <span class="list-top-movie-item-en">
-             Funny Face
+             Confession of Murder
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1809,21 +1809,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tieng-gam-2" title="Tiếng Gầm">
+          <a class="list-top-movie-link" href="/phim-moi/me-chong" title="Mẹ chồng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieng-gam-2022-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-chong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tiếng Gầm
+             Mẹ chồng
             </span>
             <span class="list-top-movie-item-en">
-             Roar
+             Mistress
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1831,18 +1831,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chang-robin-hood" title="Chàng Robin Hood">
+          <a class="list-top-movie-link" href="/phim-moi/son-thon-lu-diem" title="Sơn Thôn Lữ Điếm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chang-robin-hood-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/son-thon-lu-diem-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chàng Robin Hood
+             Sơn Thôn Lữ Điếm
             </span>
             <span class="list-top-movie-item-en">
-             Robin Hood: Men in Tights
+             The HAUNTING 3
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/capitani" title="Capitani">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/capitani-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Capitani
+            </span>
+            <span class="list-top-movie-item-en">
+             Capitani
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1853,43 +1875,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mua-dep" title="Mùa đẹp">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-truy-tim-tren-thien-ha" title="Cuộc Truy Tìm Trên Thiên Hà">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mua-dep-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-truy-tim-tren-thien-ha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mùa đẹp
+             Cuộc Truy Tìm Trên Thiên Hà
             </span>
             <span class="list-top-movie-item-en">
-             Beautiful Season
+             Galaxy Quest
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/luat-rung" title="Luật Rừng">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luat-rung-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Luật Rừng
-            </span>
-            <span class="list-top-movie-item-en">
-             Lawless
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
