add new website from server na

--- a/xem-phim-moi/doraemon-nobita-va-ban-giao-huong-dia-cau/index.html
+++ b/xem-phim-moi/doraemon-nobita-va-ban-giao-huong-dia-cau/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             15
+             16
             </dd>
             <br/>
            </dl>
@@ -1787,18 +1787,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loi-thu-toi-cua-ke-sat-nhan" title="Lời thú tội của kẻ sát nhân">
+          <a class="list-top-movie-link" href="/phim-moi/till-death" title="Till Death">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-thu-toi-cua-ke-sat-nhan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/till-death-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lời thú tội của kẻ sát nhân
+             Till Death
             </span>
             <span class="list-top-movie-item-en">
-             Confession of Murder
+             Till Death
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1809,18 +1809,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/me-chong" title="Mẹ chồng">
+          <a class="list-top-movie-link" href="/phim-moi/mien-dat-hua" title="Miền Đất Hứa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-chong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mien-dat-hua-2012-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mẹ chồng
+             Miền Đất Hứa
             </span>
             <span class="list-top-movie-item-en">
-             Mistress
+             Promised Land
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1831,21 +1831,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/son-thon-lu-diem" title="Sơn Thôn Lữ Điếm">
+          <a class="list-top-movie-link" href="/phim-moi/chuoc-chuoc-phong-luu" title="Chước Chước Phong Lưu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/son-thon-lu-diem-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuoc-chuoc-phong-luu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sơn Thôn Lữ Điếm
+             Chước Chước Phong Lưu
             </span>
             <span class="list-top-movie-item-en">
-             The HAUNTING 3
+             The Legend of Zhuohua
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1853,18 +1853,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/capitani" title="Capitani">
+          <a class="list-top-movie-link" href="/phim-moi/ham-long-thien-quan" title="Hám Long Thiên Quan">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/capitani-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ham-long-thien-quan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Capitani
+             Hám Long Thiên Quan
             </span>
             <span class="list-top-movie-item-en">
-             Capitani
+             Dragon Shaking Coffin
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1875,21 +1875,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-truy-tim-tren-thien-ha" title="Cuộc Truy Tìm Trên Thiên Hà">
+          <a class="list-top-movie-link" href="/phim-moi/co-con-gai-rieng-xinh-dep-va-bo-duong-dam-dang" title="Cô Con Gái Riêng Xinh Đẹp Và Bố Dượng Dâm Đãng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-truy-tim-tren-thien-ha-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-con-gai-rieng-xinh-dep-va-bo-duong-dam-dang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc Truy Tìm Trên Thiên Hà
+             Cô Con Gái Riêng Xinh Đẹp Và Bố Dượng Dâm Đãng
             </span>
             <span class="list-top-movie-item-en">
-             Galaxy Quest
+             새아빠와 모녀
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
