add new website from server na

--- a/xem-phim-bo/tu-phuong-quan/index.html
+++ b/xem-phim-bo/tu-phuong-quan/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1660,18 +1660,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ky-sinh-thu" title="Ký sinh thú">
+          <a class="list-top-movie-link" href="/phim-moi/thao-xich-danny-doi-cho" title="Tháo Xích – Danny Đời Chó">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ky-sinh-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thao-xich-danny-doi-cho-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ký sinh thú
+             Tháo Xích – Danny Đời Chó
             </span>
             <span class="list-top-movie-item-en">
-             Parasyte: The Maxim
+             Unleashed - Danny The Dog
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1682,62 +1682,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xung-danh-tai-nu-phan-2" title="Xứng Danh Tài Nữ (Phần 2)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xung-danh-tai-nu-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Xứng Danh Tài Nữ (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Xứng Danh Tài Nữ
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hiep-nu" title="Hiệp Nữ">
+          <a class="list-top-movie-link" href="/phim-moi/palm-springs-mo-mat-thay-hom-qua" title="Palm Springs: Mở Mắt Thấy Hôm Qua">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hiep-nu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/palm-springs-mo-mat-thay-hom-qua-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hiệp Nữ
+             Palm Springs: Mở Mắt Thấy Hôm Qua
             </span>
             <span class="list-top-movie-item-en">
-             A Touch of Zen
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vung-dat-chet-2" title="Vùng Đất Chết 2">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vung-dat-chet-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vùng Đất Chết 2
-            </span>
-            <span class="list-top-movie-item-en">
-             The Stakelander - Stake Land 2
+             Palm Springs
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1748,18 +1704,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-iron-giant" title="The Iron Giant">
+          <a class="list-top-movie-link" href="/phim-moi/the-personal-history-of-david-copperfield" title="The Personal History of David Copperfield">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-iron-giant-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-personal-history-of-david-copperfield-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Iron Giant
+             The Personal History of David Copperfield
             </span>
             <span class="list-top-movie-item-en">
-             The Iron Giant
+             The Personal History of David Copperfield
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/leo-da-vinci-truy-tim-kho-bau" title="Leo Da Vinci: Truy Tìm Kho Báu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/leo-da-vinci-truy-tim-kho-bau-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Leo Da Vinci: Truy Tìm Kho Báu
+            </span>
+            <span class="list-top-movie-item-en">
+             Leo Da Vinci: Mission Mona Lisa
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/diep-vien-salt" title="Điệp viên Salt">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/diep-vien-salt-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Điệp viên Salt
+            </span>
+            <span class="list-top-movie-item-en">
+             Salt
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
