--- a/xem-phim-bo/lieu-chu-ky/index.html
+++ b/xem-phim-bo/lieu-chu-ky/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             8
             </dd>
             <br/>
            </dl>
@@ -1657,40 +1657,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ky-si-co-doc" title="Kỵ Sĩ Cô Độc">
+          <a class="list-top-movie-link" href="/phim-moi/hikaru-utada-tieng-cuoi-trong-bong-toi-2018" title="Hikaru Utada: Tiếng cười trong bóng tối 2018">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ky-si-co-doc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hikaru-utada-tieng-cuoi-trong-bong-toi-2018-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kỵ Sĩ Cô Độc
+             Hikaru Utada: Tiếng cười trong bóng tối 2018
             </span>
             <span class="list-top-movie-item-en">
-             The Lone Ranger
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/rung-chuyen-3-ai-la-jon-galt" title="Rung Chuyển 3: Ai Là Jon Galt">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rung-chuyen-3-ai-la-jon-galt-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Rung Chuyển 3: Ai Là Jon Galt
-            </span>
-            <span class="list-top-movie-item-en">
-             Atlas Shrugged Part III
+             Hikaru Utada Laughter in the Dark Tour 2018
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1701,21 +1679,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bong-dem-kinh-hoang-2" title="Bóng Đêm Kinh Hoàng 2">
+          <a class="list-top-movie-link" href="/phim-moi/xa-dam-dong-dien-loan" title="Xa Đám Đông Điên Loạn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bong-dem-kinh-hoang-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xa-dam-dong-dien-loan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bóng Đêm Kinh Hoàng 2
+             Xa Đám Đông Điên Loạn
             </span>
             <span class="list-top-movie-item-en">
-             Fright Night 2
+             Far from the Madding Crowd
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             7 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1723,21 +1701,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/michael-mcintyre-nguoi-dan-chuong-trinh" title="Michael McIntyre: Người dẫn chương trình">
+          <a class="list-top-movie-link" href="/phim-moi/ngay-cua-bac-si" title="Ngày Của Bác Sĩ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/michael-mcintyre-nguoi-dan-chuong-trinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngay-cua-bac-si-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Michael McIntyre: Người dẫn chương trình
+             Ngày Của Bác Sĩ
             </span>
             <span class="list-top-movie-item-en">
-             Michael McIntyre: Showman
+             The Day of the Doctor
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1745,21 +1723,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cat-xeo" title="Cắt Xẻo">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-toi-va-ma-quy-thanh-nguoi-mot-nha" title="Chuyện Tôi Và Ma Quỷ Thành Người Một Nhà">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cat-xeo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-toi-va-ma-quy-thanh-nguoi-mot-nha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cắt Xẻo
+             Chuyện Tôi Và Ma Quỷ Thành Người Một Nhà
             </span>
             <span class="list-top-movie-item-en">
-             Excision
+             Marry My Dead Body
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/van-may-am-thuc" title="Vận May Ẩm Thực">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-may-am-thuc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vận May Ẩm Thực
+            </span>
+            <span class="list-top-movie-item-en">
+             Food Luck
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
